# pdfmanagement_backend

./: build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
pdfmanagement_be/: .env.copy  asgi.py  render.yaml  settings.py  urls.py  wsgi.py
uploads/: models.py  urls.py  views.py
uploads/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_usermodel_access_shared_ids.py
