[tool.poetry]
name = "pdfmanagement_backend"
version = "0.1.0"
description = "Django Rest Backend for PDF Management"
authors = ["Jeremy_1806 <2019117@iiitdmj.ac.in>"]
readme = "README.md"
packages = [{include = "pdfmanagement_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
